# clilib

./: .gitignore  DESIGN.md  demo.py  git.py  pyproject.toml
clilib/: app.py  argument.py  command.py  compiler.py  context.py  internal.py  mypy_plugin.py  parameters.py  parser.py
heated/: app.py  command.py  compiler.py  parameters.py  parser.py
tests/: test_argument.py  test_command.py  test_compiler.py  test_parameters.py  test_parser.py
