[tool.poetry]
name = "heated"
version = "0.1.0"
description = "Heated Arguments - another command line parser"
authors = ["Michael Caley <mjcaley@darkarctic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.931"
pyright = "^1.1.226"
black = "^22.1.0"
pytest-mock = "^3.7.0"

[tool.coverage.run]
source = ["heated"]
branch = true

[tool.mypy]
plugins = ["heated.mypy_plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
